--- a/writing/results.Rmd
+++ b/writing/results.Rmd
@@ -28,9 +28,8 @@ cache$del(key = "lock", namespace = "session")
 loadd(all_preds, cache=cache)
 loadd(all_aics, cache=cache)
 
-perfect_coverage_models <- filter(all_preds, model_begin == 1988, model_end == 2017)
-
 winning_aics <- all_aics %>%
+  filter(model_family == "Gamma") %>%
   group_by(matssname, model_family) %>%
   mutate(minAICc = min(model_AICc)) %>%
   mutate(deltaAICc = minAICc - model_AICc)  %>%
@@ -43,21 +42,49 @@ winning_aics <- all_aics %>%
   arrange(matssname, model_family, rank)
 
 delta_2 <- winning_aics %>% filter(deltaAICc > -2) %>%
+  filter(model_family == "Gamma") %>%
   group_by(matssname, model_family) %>%
   arrange(modelcomplexity) %>%
   mutate(rank = row_number()) %>%
   filter(rank == 1) %>%
   ungroup()
 
-delta_2 %>% group_by(model_family, model_formula) %>% tally()
 
 winning_fits <- delta_2 %>%
-  left_join(all_preds) %>%
-  filter(model_family == "Gamma")
-
+  left_join(all_preds) 
 ```
 
 # Results
 
+## Model outcomes
+
+```{r, results =T}
+
+delta_2 %>% group_by(model_family, model_formula) %>% tally()
+
+```
+
+## Direction and magnitude of slopes
+
+```{r}
+ggplot(filter(winning_fits, modelcomplexity > 1), aes(ratio_sim)) + geom_histogram() + scale_x_log10()
+
+ggplot(filter(winning_fits, modelcomplexity > 1), aes(ratio_real)) + geom_histogram() + scale_x_log10()
+
+```
+
+## Direction of decoupling
+
+```{r}
+
+ggplot()
+
+```
+
+## CV of timeseries
+
+## CorCoef of observed to null
+
+##
 \newpage
 # References
