check out htis viz

--- a/writing/results.Rmd
+++ b/writing/results.Rmd
@@ -58,10 +58,18 @@ winning_fits <- delta_2 %>%
 
 ## Model outcomes
 
+Overall proportion of routes with winning models:
+
 ```{r, results =T}
 
-winning_fits %>% group_by(model_family, model_formula) %>% tally()
+winning_fits %>% group_by(model_family, model_formula) %>% tally() %>%
+  mutate(prop = n / sum(n))
 
+```
+
+Of models with slope term, the proportion for which abundance and biomass are increasing:
+
+```{r}
 slope_winning_fits <- winning_fits %>%
   filter(modelcomplexity > 1)
 
@@ -75,6 +83,17 @@ slope_winning_fits %>%
   mutate(prop = n / sum(n))
 
 
+slope_winning_fits %>%
+  mutate(biomass_increasing = ratio_real > 1) %>%
+  group_by(biomass_increasing) %>%
+  tally() %>%
+  mutate(prop = n / sum(n))
+```
+
+
+Restricted to models with an *interaction*:
+
+```{r}
 interaction_winning_fits %>%
   mutate(abundance_increasing = ratio_sim > 1) %>%
   group_by(abundance_increasing) %>%
@@ -102,7 +121,7 @@ ggplot(slope_winning_fits, aes(ratio_real)) + geom_histogram() + scale_x_log10()
 
 ## Direction of decoupling
 
-```{r}
+```{r, fig.dim= c(4,4)}
 
 interaction_all_fits <- all_preds %>% group_by_all() %>% filter( grepl( "* source",model_formula), model_family == "Gamma") %>% mutate(plus = substr(model_formula, 12,12) == "+") %>% filter(!plus) %>% ungroup() %>%
   left_join(select(winning_fits, matssname, model_formula) %>% rename(winning_formula = model_formula))
