--- a/writing/sections/figures_and_tables.Rmd
+++ b/writing/sections/figures_and_tables.Rmd
@@ -141,7 +141,7 @@ timeseries_plot <- ggplot(dat_dynamics, aes(timeperiod, total_biomass, color = s
 #timeseries_plot
 ```
 
-```{r, fig.dim = c(6,5)}
+```{r, fig.dim = c(6,5.2)}
 two_plots <- multi_panel_figure(columns = 1 ,height = c(2.25,2.75), unit = "in") %>%
   fill_panel(timeseries_plot) %>%
   fill_panel(isd_plots)
@@ -153,238 +153,238 @@ two_plots
 
 Illustration of abundance-driven (null model) dynamics as compared to observed dynamics (A), and the underlying dynamics of the ISD (B) for a sample route (`r dat_isd$metadata$location$routename`, `r dat_isd$metadata$location$regionname`). **A. Dynamics of total biomass.** The orange points show the true values for total biomass in each year, and the purple points show the values for total biomass simulated from a null model that incorporates change in total abundance, but assumes no change in the size structure, over time. The smooth lines show the predicted values from an ordinary (Gaussian) linear model of the form `total_biomass ~ year * simtype`. <!-- Using gaussian here because it is easier to interpret directly and compute r2. results are the same if you use Gamma --> The solid and dotted rectangles show the segments of the timeseries used to construct the "beginning" and "ending" ISDs shown in panel B, respectively. For this route, change in the individual size distribution has decoupled the dynamics of biomass from those that would occur due only to changes in abundance. The slope for abundance-driven dynamics is significantly more negative than for the observed dynamics (interaction term p = 0.0015), which do not have a slope significantly different from zero (slope term p = .23). **B. Underlying changes in the ISD.** The individual size distributions for the first 5 years (solid lines) and last 5 years (dashed lines) of the timeseries. The x-axis is body size (as mass in grams; note log scale) and the y-axis is probability density from a Gaussian mixture model fit to a vector of simulated individual masses for all individuals observed in the years in questions, standardized to sum to 1. For the abundance-driven (purple) scenario, individuals' species identities (which determine their body size estimates) are re-assigned at random weighte by each species' mean relative abundance throughout the timeseries, resulting in a consistent individual size distribution over time. For the observed (orange) scenario, individuals' body sizes are estimated based on their actual species identities. For this route, species composition has shifted over time, resulting in distinct ISDs for the "begin" and "end" time periods. Specifically, the "end" ISD has peaks at larger body sizes (ca. 90g and 500g) not present in the "begin" ISD. This redistribution of density towards larger body sizes results in an overall increase in body size community wise, which partially offsets declines in total biomass from those expected given change in abundance alone. 
 
-<!-- # Biomass -->
+# Biomass
 
-<!-- ## Model outcomes -->
+## Model outcomes
 
-<!-- Overall proportion of routes with winning models: -->
+Overall proportion of routes with winning models:
 
-<!-- ```{r, results =T} -->
+```{r, results =T}
 
-<!-- winning_fits %>% group_by(model_family, model_formula) %>% tally() %>% -->
-<!--   mutate(prop = n / sum(n)) -->
+winning_fits %>% group_by(model_family, model_formula) %>% tally() %>%
+  mutate(prop = n / sum(n))
 
-<!-- ``` -->
+```
 
-<!-- Of models with slope term, the proportion for which abundance and biomass are increasing: -->
+Of models with slope term, the proportion for which abundance and biomass are increasing:
 
-<!-- ```{r} -->
-<!-- slope_winning_fits <- winning_fits %>% -->
-<!--   filter(modelcomplexity > 1) -->
+```{r}
+slope_winning_fits <- winning_fits %>%
+  filter(modelcomplexity > 1)
 
-<!-- interaction_winning_fits <- winning_fits %>% -->
-<!--   filter(modelcomplexity > 2) -->
+interaction_winning_fits <- winning_fits %>%
+  filter(modelcomplexity > 2)
 
-<!-- slope_winning_fits %>% -->
-<!--   mutate(abundance_increasing = ratio_sim > 1) %>% -->
-<!--   group_by(abundance_increasing) %>% -->
-<!--   tally() %>% -->
-<!--   mutate(prop = n / sum(n)) -->
+slope_winning_fits %>%
+  mutate(abundance_increasing = ratio_sim > 1) %>%
+  group_by(abundance_increasing) %>%
+  tally() %>%
+  mutate(prop = n / sum(n))
 
 
-<!-- slope_winning_fits %>% -->
-<!--   mutate(biomass_increasing = ratio_real > 1) %>% -->
-<!--   group_by(biomass_increasing) %>% -->
-<!--   tally() %>% -->
-<!--   mutate(prop = n / sum(n)) -->
-<!-- ``` -->
+slope_winning_fits %>%
+  mutate(biomass_increasing = ratio_real > 1) %>%
+  group_by(biomass_increasing) %>%
+  tally() %>%
+  mutate(prop = n / sum(n))
+```
 
 
-<!-- Restricted to models with an *interaction*: -->
+Restricted to models with an *interaction*:
 
-<!-- ```{r} -->
-<!-- interaction_winning_fits %>% -->
-<!--   mutate(abundance_increasing = ratio_sim > 1) %>% -->
-<!--   group_by(abundance_increasing) %>% -->
-<!--   tally() %>% -->
-<!--   mutate(prop = n / sum(n)) -->
+```{r}
+interaction_winning_fits %>%
+  mutate(abundance_increasing = ratio_sim > 1) %>%
+  group_by(abundance_increasing) %>%
+  tally() %>%
+  mutate(prop = n / sum(n))
 
 
-<!-- interaction_winning_fits %>% -->
-<!--   mutate(biomass_increasing = ratio_real > 1) %>% -->
-<!--   group_by(biomass_increasing) %>% -->
-<!--   tally() %>% -->
-<!--   mutate(prop = n / sum(n)) -->
+interaction_winning_fits %>%
+  mutate(biomass_increasing = ratio_real > 1) %>%
+  group_by(biomass_increasing) %>%
+  tally() %>%
+  mutate(prop = n / sum(n))
 
-<!-- ``` -->
+```
 
-<!-- ## Direction and magnitude of slopes -->
+## Direction and magnitude of slopes
 
-<!-- ```{r} -->
-<!-- ggplot(slope_winning_fits, aes(ratio_sim)) + geom_histogram() + scale_x_log10() + geom_vline(xintercept = 1) + ggtitle("Abundance-driven (null model) slope") -->
+```{r}
+ggplot(slope_winning_fits, aes(ratio_sim)) + geom_histogram() + scale_x_log10() + geom_vline(xintercept = 1) + ggtitle("Abundance-driven (null model) slope")
 
-<!-- ``` -->
+```
 
-<!-- ```{r} -->
-<!-- ggplot(slope_winning_fits, aes(ratio_real)) + geom_histogram() + scale_x_log10() + geom_vline(xintercept = 1) + ggtitle("Observed slope") -->
+```{r}
+ggplot(slope_winning_fits, aes(ratio_real)) + geom_histogram() + scale_x_log10() + geom_vline(xintercept = 1) + ggtitle("Observed slope")
 
-<!-- ``` -->
+```
 
-<!-- ## Direction of decoupling -->
+## Direction of decoupling
 
-<!-- ```{r, fig.dim= c(4,4)} -->
+```{r, fig.dim= c(4,4)}
 
-<!-- interaction_all_fits <- all_preds %>% group_by_all() %>% filter( grepl( "* source",model_formula), model_family == "Gamma") %>% mutate(plus = substr(model_formula, 12,12) == "+") %>% filter(!plus) %>% ungroup() %>% -->
-<!--   left_join(select(winning_fits, matssname, model_formula) %>% rename(winning_formula = model_formula)) -->
+interaction_all_fits <- all_preds %>% group_by_all() %>% filter( grepl( "* source",model_formula), model_family == "Gamma") %>% mutate(plus = substr(model_formula, 12,12) == "+") %>% filter(!plus) %>% ungroup() %>%
+  left_join(select(winning_fits, matssname, model_formula) %>% rename(winning_formula = model_formula))
 
-<!-- ggplot(interaction_all_fits, aes(ratio_sim, ratio_real)) + geom_point(alpha = .2) + geom_point(data = filter(interaction_all_fits, winning_formula != "1"), aes(color = winning_formula), alpha = .5) + scale_y_log10() + scale_x_log10() + scale_color_viridis_d(end = .8) + theme(legend.position = "bottom") + geom_abline(intercept = 0, slope = 1) + geom_vline(xintercept = 1) + geom_hline(yintercept = 1) -->
+ggplot(interaction_all_fits, aes(ratio_sim, ratio_real)) + geom_point(alpha = .2) + geom_point(data = filter(interaction_all_fits, winning_formula != "1"), aes(color = winning_formula), alpha = .5) + scale_y_log10() + scale_x_log10() + scale_color_viridis_d(end = .8) + theme(legend.position = "bottom") + geom_abline(intercept = 0, slope = 1) + geom_vline(xintercept = 1) + geom_hline(yintercept = 1)
 
-<!-- ``` -->
-<!-- \newpage -->
-<!-- # Energy use  -->
-<!-- ```{r} -->
-<!-- loadd(all_preds_energy, cache=cache) -->
-<!-- loadd(all_aics_energy, cache=cache) -->
+```
+\newpage
+# Energy use
+```{r}
+loadd(all_preds_energy, cache=cache)
+loadd(all_aics_energy, cache=cache)
 
-<!-- winning_aics_energy <- all_aics_energy %>% -->
-<!--   filter(model_family == "Gamma") %>% -->
-<!--   group_by(matssname, model_family) %>% -->
-<!--   mutate(minAICc = min(model_AICc)) %>% -->
-<!--   mutate(deltaAICc = minAICc - model_AICc)  %>% -->
-<!--   mutate(exp_deltas = exp(.5 * deltaAICc)) %>% -->
-<!--   mutate(denom = sum(exp_deltas)) %>% -->
-<!--   mutate(aicc_wt = exp_deltas/ denom) %>% -->
-<!--   arrange(desc(aicc_wt)) %>% -->
-<!--   mutate(rank =row_number()) %>% -->
-<!--   ungroup() %>% -->
-<!--   arrange(matssname, model_family, rank) -->
+winning_aics_energy <- all_aics_energy %>%
+  filter(model_family == "Gamma") %>%
+  group_by(matssname, model_family) %>%
+  mutate(minAICc = min(model_AICc)) %>%
+  mutate(deltaAICc = minAICc - model_AICc)  %>%
+  mutate(exp_deltas = exp(.5 * deltaAICc)) %>%
+  mutate(denom = sum(exp_deltas)) %>%
+  mutate(aicc_wt = exp_deltas/ denom) %>%
+  arrange(desc(aicc_wt)) %>%
+  mutate(rank =row_number()) %>%
+  ungroup() %>%
+  arrange(matssname, model_family, rank)
 
-<!-- delta_2_energy <- winning_aics_energy %>% filter(deltaAICc > -2) %>% -->
-<!--   filter(model_family == "Gamma") %>% -->
-<!--   group_by(matssname, model_family) %>% -->
-<!--   arrange(modelcomplexity) %>% -->
-<!--   mutate(rank = row_number()) %>% -->
-<!--   filter(rank == 1) %>% -->
-<!--   ungroup() -->
+delta_2_energy <- winning_aics_energy %>% filter(deltaAICc > -2) %>%
+  filter(model_family == "Gamma") %>%
+  group_by(matssname, model_family) %>%
+  arrange(modelcomplexity) %>%
+  mutate(rank = row_number()) %>%
+  filter(rank == 1) %>%
+  ungroup()
 
 
-<!-- winning_fits_energy <- delta_2_energy %>% -->
-<!--   left_join(all_preds_energy)  -->
-<!-- ``` -->
+winning_fits_energy <- delta_2_energy %>%
+  left_join(all_preds_energy)
+```
 
 
-<!-- ## Model outcomes -->
+## Model outcomes
 
-<!-- Overall proportion of routes with winning models: -->
+Overall proportion of routes with winning models:
 
-<!-- ```{r, results =T} -->
+```{r, results =T}
 
-<!-- winning_fits_energy %>% group_by(model_family, model_formula) %>% tally() %>% -->
-<!--   mutate(prop = n / sum(n)) -->
+winning_fits_energy %>% group_by(model_family, model_formula) %>% tally() %>%
+  mutate(prop = n / sum(n))
 
-<!-- ``` -->
+```
 
-<!-- Of models with slope term, the proportion for which abundance and biomass are increasing: -->
+Of models with slope term, the proportion for which abundance and biomass are increasing:
 
-<!-- ```{r} -->
-<!-- slope_winning_fits_energy <- winning_fits_energy %>% -->
-<!--   filter(modelcomplexity > 1) -->
+```{r}
+slope_winning_fits_energy <- winning_fits_energy %>%
+  filter(modelcomplexity > 1)
 
-<!-- interaction_winning_fits_energy <- winning_fits_energy %>% -->
-<!--   filter(modelcomplexity > 2) -->
+interaction_winning_fits_energy <- winning_fits_energy %>%
+  filter(modelcomplexity > 2)
 
-<!-- slope_winning_fits_energy %>% -->
-<!--   mutate(abundance_increasing = ratio_sim > 1) %>% -->
-<!--   group_by(abundance_increasing) %>% -->
-<!--   tally() %>% -->
-<!--   mutate(prop = n / sum(n)) -->
+slope_winning_fits_energy %>%
+  mutate(abundance_increasing = ratio_sim > 1) %>%
+  group_by(abundance_increasing) %>%
+  tally() %>%
+  mutate(prop = n / sum(n))
 
 
-<!-- slope_winning_fits_energy %>% -->
-<!--   mutate(energy_increasing = ratio_real > 1) %>% -->
-<!--   group_by(energy_increasing) %>% -->
-<!--   tally() %>% -->
-<!--   mutate(prop = n / sum(n)) -->
-<!-- ``` -->
+slope_winning_fits_energy %>%
+  mutate(energy_increasing = ratio_real > 1) %>%
+  group_by(energy_increasing) %>%
+  tally() %>%
+  mutate(prop = n / sum(n))
+```
 
 
-<!-- Restricted to models with an *interaction*: -->
+Restricted to models with an *interaction*:
 
-<!-- ```{r} -->
-<!-- interaction_winning_fits_energy %>% -->
-<!--   mutate(abundance_increasing = ratio_sim > 1) %>% -->
-<!--   group_by(abundance_increasing) %>% -->
-<!--   tally() %>% -->
-<!--   mutate(prop = n / sum(n)) -->
+```{r}
+interaction_winning_fits_energy %>%
+  mutate(abundance_increasing = ratio_sim > 1) %>%
+  group_by(abundance_increasing) %>%
+  tally() %>%
+  mutate(prop = n / sum(n))
 
 
-<!-- interaction_winning_fits_energy %>% -->
-<!--   mutate(energy_increasing = ratio_real > 1) %>% -->
-<!--   group_by(energy_increasing) %>% -->
-<!--   tally() %>% -->
-<!--   mutate(prop = n / sum(n)) -->
+interaction_winning_fits_energy %>%
+  mutate(energy_increasing = ratio_real > 1) %>%
+  group_by(energy_increasing) %>%
+  tally() %>%
+  mutate(prop = n / sum(n))
 
-<!-- ``` -->
+```
 
-<!-- ## Direction and magnitude of slopes -->
+## Direction and magnitude of slopes
 
-<!-- ```{r} -->
-<!-- ggplot(slope_winning_fits_energy, aes(ratio_sim)) + geom_histogram() + scale_x_log10() + geom_vline(xintercept = 1) + ggtitle("Abundance-driven (null model) slope") -->
-<!-- ``` -->
+```{r}
+ggplot(slope_winning_fits_energy, aes(ratio_sim)) + geom_histogram() + scale_x_log10() + geom_vline(xintercept = 1) + ggtitle("Abundance-driven (null model) slope")
+```
 
-<!-- ```{r} -->
+```{r}
 
-<!-- ggplot(slope_winning_fits_energy, aes(ratio_real)) + geom_histogram() + scale_x_log10() + geom_vline(xintercept = 1) + ggtitle("Observed slope") -->
+ggplot(slope_winning_fits_energy, aes(ratio_real)) + geom_histogram() + scale_x_log10() + geom_vline(xintercept = 1) + ggtitle("Observed slope")
 
-<!-- ``` -->
+```
 
-<!-- ## Direction of decoupling -->
+## Direction of decoupling
 
-<!-- ```{r, fig.dim= c(4,4)} -->
+```{r, fig.dim= c(4,4)}
 
-<!-- interaction_all_fits_energy <- all_preds_energy %>% group_by_all() %>% filter( grepl( "* source",model_formula), model_family == "Gamma") %>% mutate(plus = substr(model_formula, 12,12) == "+") %>% filter(!plus) %>% ungroup() %>% -->
-<!--   left_join(select(winning_fits_energy, matssname, model_formula) %>% rename(winning_formula = model_formula)) -->
+interaction_all_fits_energy <- all_preds_energy %>% group_by_all() %>% filter( grepl( "* source",model_formula), model_family == "Gamma") %>% mutate(plus = substr(model_formula, 12,12) == "+") %>% filter(!plus) %>% ungroup() %>%
+  left_join(select(winning_fits_energy, matssname, model_formula) %>% rename(winning_formula = model_formula))
 
-<!-- ggplot(interaction_all_fits_energy, aes(ratio_sim, ratio_real)) + geom_point(alpha = .2) + geom_point(data = filter(interaction_all_fits_energy, winning_formula != "1"), aes(color = winning_formula), alpha = .5) + scale_y_log10() + scale_x_log10() + scale_color_viridis_d(end = .8) + theme(legend.position = "bottom") + geom_abline(intercept = 0, slope = 1) + geom_vline(xintercept = 1) + geom_hline(yintercept = 1) -->
+ggplot(interaction_all_fits_energy, aes(ratio_sim, ratio_real)) + geom_point(alpha = .2) + geom_point(data = filter(interaction_all_fits_energy, winning_formula != "1"), aes(color = winning_formula), alpha = .5) + scale_y_log10() + scale_x_log10() + scale_color_viridis_d(end = .8) + theme(legend.position = "bottom") + geom_abline(intercept = 0, slope = 1) + geom_vline(xintercept = 1) + geom_hline(yintercept = 1)
 
-<!-- ``` -->
+```
 
-<!-- ## Change in mean body size -->
+## Change in mean body size
 
-<!-- ```{r} -->
+```{r}
 
-<!-- loadd(all_isd_compares, cache =cache) -->
+loadd(all_isd_compares, cache =cache)
 
-<!-- winning_fits <- winning_fits %>% left_join(all_isd_compares) -->
+winning_fits <- winning_fits %>% left_join(all_isd_compares)
 
 
-<!-- ggplot(winning_fits, aes(real_mass_ratio, color = model_formula, fill= model_formula)) + geom_histogram() + facet_wrap(vars(model_formula), scales = 'free_y', ncol = 1) -->
+ggplot(winning_fits, aes(real_mass_ratio, color = model_formula, fill= model_formula)) + geom_histogram() + facet_wrap(vars(model_formula), scales = 'free_y', ncol = 1)
 
 
-<!-- ``` -->
+```
 
-<!-- ## ISD overlap -->
+## ISD overlap
 
-<!-- ```{r} -->
+```{r}
 
 
-<!-- ggplot(winning_fits, aes(real_overlap, color = model_formula, fill = model_formula)) + geom_histogram() + facet_wrap(vars(model_formula), scales = 'free_y', ncol = 1) -->
+ggplot(winning_fits, aes(real_overlap, color = model_formula, fill = model_formula)) + geom_histogram() + facet_wrap(vars(model_formula), scales = 'free_y', ncol = 1)
 
-<!-- isd_glm <- glm(real_overlap ~ model_formula, family = "binomial", data = winning_fits) -->
-<!-- #  -->
-<!-- # AIC(isd_glm) -->
-<!-- # AIC(glm(real_overlap ~ 1, family = "binomial", data = winning_fits)) -->
+isd_glm <- glm(real_overlap ~ model_formula, family = "binomial", data = winning_fits)
+#
+# AIC(isd_glm)
+# AIC(glm(real_overlap ~ 1, family = "binomial", data = winning_fits))
 
-<!-- glm_cor <- cor(predict(isd_glm, type = "response"), isd_glm$model[,1]) ^ 2 -->
-<!-- ``` -->
+glm_cor <- cor(predict(isd_glm, type = "response"), isd_glm$model[,1]) ^ 2
+```
 
-<!-- R2 of binomial GLM `overlap ~ model_formula` (which does not beat a `overlap ~ 1` via AIC, FYI) -->
+R2 of binomial GLM `overlap ~ model_formula` (which does not beat a `overlap ~ 1` via AIC, FYI)
 
-<!-- ```{r} -->
-<!-- glm_cor -->
-<!-- ``` -->
+```{r}
+glm_cor
+```
 
-<!-- # Goodness of fit of models -->
+# Goodness of fit of models
 
-<!-- ```{r} -->
+```{r}
 
-<!-- ggplot(winning_fits, aes(model_cor_squared)) + geom_histogram() + facet_wrap(vars(model_formula), scales = "free_y") -->
+ggplot(winning_fits, aes(model_cor_squared)) + geom_histogram() + facet_wrap(vars(model_formula), scales = "free_y")
 
-<!-- ggplot(winning_fits_energy, aes(model_cor_squared)) + geom_histogram() + facet_wrap(vars(model_formula), scales = "free_y") -->
+ggplot(winning_fits_energy, aes(model_cor_squared)) + geom_histogram() + facet_wrap(vars(model_formula), scales = "free_y")
 
-<!-- ``` -->
+```
 
 
-<!-- ## -->
+##
 \newpage
 # References
