--- a/writing/sections/figures_and_tables.Rmd
+++ b/writing/sections/figures_and_tables.Rmd
@@ -25,33 +25,6 @@ cache <- storr::storr_dbi("datatable", "keystable", db)
 cache$del(key = "lock", namespace = "session")
 
 
-loadd(all_preds, cache=cache)
-loadd(all_aics, cache=cache)
-
-winning_aics <- all_aics %>%
-  filter(model_family == "Gamma") %>%
-  group_by(matssname, model_family) %>%
-  mutate(minAICc = min(model_AICc)) %>%
-  mutate(deltaAICc = minAICc - model_AICc)  %>%
-  mutate(exp_deltas = exp(.5 * deltaAICc)) %>%
-  mutate(denom = sum(exp_deltas)) %>%
-  mutate(aicc_wt = exp_deltas/ denom) %>%
-  arrange(desc(aicc_wt)) %>%
-  mutate(rank =row_number()) %>%
-  ungroup() %>%
-  arrange(matssname, model_family, rank)
-
-delta_2 <- winning_aics %>% filter(deltaAICc > -2) %>%
-  filter(model_family == "Gamma") %>%
-  group_by(matssname, model_family) %>%
-  arrange(modelcomplexity) %>%
-  mutate(rank = row_number()) %>%
-  filter(rank == 1) %>%
-  ungroup()
-
-
-winning_fits <- delta_2 %>%
-  left_join(all_preds) 
 ```
 
 # Abundance-driven vs. observed change
@@ -154,89 +127,54 @@ two_plots
 Illustration of abundance-driven (null model) dynamics as compared to observed dynamics (A), and the underlying dynamics of the ISD (B) for a sample route (`r dat_isd$metadata$location$routename`, `r dat_isd$metadata$location$regionname`). **A. Dynamics of total biomass.** The orange points show the true values for total biomass in each year, and the purple points show the values for total biomass simulated from a null model that incorporates change in total abundance, but assumes no change in the size structure, over time. The smooth lines show the predicted values from a Gamma (log-link) linear model of the form `total_biomass ~ year * simtype`. <!-- Using gaussian here because it is easier to interpret directly and compute r2. results are the same if you use Gamma --> For this route, change in the individual size distribution has decoupled the dynamics of biomass from those that would occur due only to changes in abundance. The slope for abundance-driven dynamics is significantly more negative than for the observed dynamics (interaction term p = 0.0013), which do not have a slope significantly different from zero (slope term p = .27). **B. Underlying changes in the ISD.** The individual size distributions for the first 5 years (solid lines) and last 5 years (dashed lines) of the timeseries. The x-axis is body size (as mass in grams; note log scale) and the y-axis is probability density from a Gaussian mixture model fit to a vector of simulated individual masses for all individuals observed in the years in questions, standardized to sum to 1. For the abundance-driven (purple) scenario, individuals' species identities (which determine their body size estimates) are re-assigned at random weighte by each species' mean relative abundance throughout the timeseries, resulting in a consistent individual size distribution over time. For the observed (orange) scenario, individuals' body sizes are estimated based on their actual species identities. For this route, species composition has shifted over time, resulting in distinct ISDs for the "begin" and "end" time periods. Specifically, the "end" ISD has peaks at larger body sizes (ca. 90g and 500g) not present in the "begin" ISD. This redistribution of density towards larger body sizes results in an overall increase in body size community wise, which partially offsets declines in total biomass from those expected given change in abundance alone. 
 
 \newpage
-# Model outcomes - biomasss
 
-Overall proportion of routes with winning models:
 
-```{r, results =T}
+```{r load and process biomass results}
 
-winning_fits %>% group_by(model_family, model_formula) %>% tally() %>%
-  mutate(prop = n / sum(n))
+loadd(all_preds, cache=cache)
+loadd(all_aics, cache=cache)
 
-```
+winning_aics <- all_aics %>%
+  filter(model_family == "Gamma") %>%
+  group_by(matssname, model_family) %>%
+  mutate(minAICc = min(model_AICc)) %>%
+  mutate(deltaAICc = minAICc - model_AICc)  %>%
+  mutate(exp_deltas = exp(.5 * deltaAICc)) %>%
+  mutate(denom = sum(exp_deltas)) %>%
+  mutate(aicc_wt = exp_deltas/ denom) %>%
+  arrange(desc(aicc_wt)) %>%
+  mutate(rank =row_number()) %>%
+  ungroup() %>%
+  arrange(matssname, model_family, rank)
 
-Of models with slope term, the proportion for which abundance and biomass are increasing:
+delta_2 <- winning_aics %>% filter(deltaAICc > -2) %>%
+  filter(model_family == "Gamma") %>%
+  group_by(matssname, model_family) %>%
+  arrange(modelcomplexity) %>%
+  mutate(rank = row_number()) %>%
+  filter(rank == 1) %>%
+  ungroup()
 
-```{r}
+winning_fits <- delta_2 %>%
+  left_join(all_preds) 
+
 slope_winning_fits <- winning_fits %>%
   filter(modelcomplexity > 1)
 
 interaction_winning_fits <- winning_fits %>%
   filter(modelcomplexity > 2)
 
-slope_winning_fits %>%
-  mutate(abundance_increasing = ratio_sim > 1) %>%
-  group_by(abundance_increasing) %>%
-  tally() %>%
-  mutate(prop = n / sum(n))
-
-
-slope_winning_fits %>%
-  mutate(biomass_increasing = ratio_real > 1) %>%
-  group_by(biomass_increasing) %>%
-  tally() %>%
-  mutate(prop = n / sum(n))
-```
-
-
-Restricted to models with an *interaction*:
-
-```{r}
-interaction_winning_fits %>%
-  mutate(abundance_increasing = ratio_sim > 1) %>%
-  group_by(abundance_increasing) %>%
-  tally() %>%
-  mutate(prop = n / sum(n))
-
-
-interaction_winning_fits %>%
-  mutate(biomass_increasing = ratio_real > 1) %>%
-  group_by(biomass_increasing) %>%
-  tally() %>%
-  mutate(prop = n / sum(n))
-
-```
-
-\newpage
-
-# Biomass slopes
-
-```{r, fig.dim = c(5, 2.5)}
 
 biomass_slopes_long <- slope_winning_fits %>%
   select(matssname, ratio_sim, ratio_real) %>%
   tidyr::pivot_longer(-matssname, names_to = "source", values_to = "biomass_ratio") %>%
   mutate(simtype = ifelse(source == "ratio_sim", "Abundance driven", "Observed"))
 
-ggplot(biomass_slopes_long, aes(biomass_ratio, color = simtype, fill = simtype)) + geom_histogram() + scale_x_log10() + geom_vline(xintercept = 1) + facet_wrap(vars(simtype), scales = "free_y") + scale_color_viridis_d(option = "plasma", begin = .2, end = .8) + scale_fill_viridis_d(option = "plasma", begin = .2, end = .8) +
-  theme(legend.position = "bottom")
-
 ```
-\newpage
 
-## Direction of decoupling
 
-```{r, fig.dim= c(4,4)}
+```{r load and process energy results}
 
-interaction_all_fits <- all_preds %>% group_by_all() %>% filter( grepl( "* source",model_formula), model_family == "Gamma") %>% mutate(plus = substr(model_formula, 12,12) == "+") %>% filter(!plus) %>% ungroup() %>%
-  left_join(select(winning_fits, matssname, model_formula) %>% rename(winning_formula = model_formula))
-
-ggplot(interaction_all_fits, aes(ratio_sim, ratio_real)) + geom_point(alpha = .2) + geom_point(data = filter(interaction_all_fits, winning_formula != "1"), aes(color = winning_formula), alpha = .5) + scale_y_log10() + scale_x_log10() + scale_color_viridis_d(end = .8) + theme(legend.position = "bottom") + geom_abline(intercept = 0, slope = 1) + geom_vline(xintercept = 1) + geom_hline(yintercept = 1)
-
-```
-\newpage
-# Energy use
-```{r}
 loadd(all_preds_energy, cache=cache)
 loadd(all_aics_energy, cache=cache)
 
@@ -264,10 +202,92 @@ delta_2_energy <- winning_aics_energy %>% filter(deltaAICc > -2) %>%
 
 winning_fits_energy <- delta_2_energy %>%
   left_join(all_preds_energy)
+
+slope_winning_fits_energy <- winning_fits_energy %>%
+  filter(modelcomplexity > 1)
+
+interaction_winning_fits_energy <- winning_fits_energy %>%
+  filter(modelcomplexity > 2)
+
+
+energy_slopes_long <- slope_winning_fits_energy %>%
+  select(matssname, ratio_sim, ratio_real) %>%
+  tidyr::pivot_longer(-matssname, names_to = "source", values_to = "energy_ratio") %>%
+  mutate(simtype = ifelse(source == "ratio_sim", "Abundance driven", "Observed"))
 ```
 
 
-## Model outcomes
+\newpage
+
+# Slopes
+
+```{r, fig.dim = c(5, 5)}
+
+biomass_slope_histogram <- ggplot(biomass_slopes_long, aes(biomass_ratio, color = simtype, fill = simtype)) + geom_histogram(boundary = 1) + scale_x_log10() + geom_vline(xintercept = 1) + facet_wrap(vars(simtype), scales = "free_y") + scale_color_viridis_d(option = "plasma", begin = .2, end = .8) + scale_fill_viridis_d(option = "plasma", begin = .2, end = .8) +
+  theme(legend.position = "none") + ggtitle("Total biomass") + xlab("")
+
+
+energy_slope_histogram <- ggplot(energy_slopes_long, aes(energy_ratio, color = simtype, fill = simtype)) + geom_histogram(boundary = 1) + scale_x_log10() + geom_vline(xintercept = 1) + facet_wrap(vars(simtype), scales = "free_y") + scale_color_viridis_d(option = "plasma", begin = .2, end = .8) + scale_fill_viridis_d(option = "plasma", begin = .2, end = .8) +
+  theme(legend.position = "bottom") + ggtitle("Total metabolic flux") + xlab("Ratio of last year to first year")
+
+slope_histograms <- multi_panel_figure(columns = 1, height = c(2.25, 2.75), unit = "in") %>%
+  fill_panel(biomass_slope_histogram) %>%
+  fill_panel(energy_slope_histogram)
+slope_histograms
+```
+\newpage
+
+# Model outcomes 
+
+## Biomass
+
+Overall proportion of routes with winning models:
+
+```{r, results =T}
+
+winning_fits %>% group_by(model_family, model_formula) %>% tally() %>%
+  mutate(prop = n / sum(n))
+
+```
+
+Of models with slope term, the proportion for which abundance and biomass are increasing:
+
+```{r}
+
+slope_winning_fits %>%
+  mutate(abundance_increasing = ratio_sim > 1) %>%
+  group_by(abundance_increasing) %>%
+  tally() %>%
+  mutate(prop = n / sum(n))
+
+
+slope_winning_fits %>%
+  mutate(biomass_increasing = ratio_real > 1) %>%
+  group_by(biomass_increasing) %>%
+  tally() %>%
+  mutate(prop = n / sum(n))
+```
+
+
+<!-- Restricted to models with an *interaction*: -->
+
+<!-- ```{r} -->
+<!-- interaction_winning_fits %>% -->
+<!--   mutate(abundance_increasing = ratio_sim > 1) %>% -->
+<!--   group_by(abundance_increasing) %>% -->
+<!--   tally() %>% -->
+<!--   mutate(prop = n / sum(n)) -->
+
+
+<!-- interaction_winning_fits %>% -->
+<!--   mutate(biomass_increasing = ratio_real > 1) %>% -->
+<!--   group_by(biomass_increasing) %>% -->
+<!--   tally() %>% -->
+<!--   mutate(prop = n / sum(n)) -->
+
+<!-- ``` -->
+
+## Metabolic flux
 
 Overall proportion of routes with winning models:
 
@@ -281,18 +301,12 @@ winning_fits_energy %>% group_by(model_family, model_formula) %>% tally() %>%
 Of models with slope term, the proportion for which abundance and biomass are increasing:
 
 ```{r}
-slope_winning_fits_energy <- winning_fits_energy %>%
-  filter(modelcomplexity > 1)
-
-interaction_winning_fits_energy <- winning_fits_energy %>%
-  filter(modelcomplexity > 2)
 
 slope_winning_fits_energy %>%
   mutate(abundance_increasing = ratio_sim > 1) %>%
   group_by(abundance_increasing) %>%
   tally() %>%
   mutate(prop = n / sum(n))
-
 
 slope_winning_fits_energy %>%
   mutate(energy_increasing = ratio_real > 1) %>%
@@ -302,46 +316,62 @@ slope_winning_fits_energy %>%
 ```
 
 
-Restricted to models with an *interaction*:
+<!-- Restricted to models with an *interaction*: -->
+
+<!-- ```{r} -->
+<!-- interaction_winning_fits_energy %>% -->
+<!--   mutate(abundance_increasing = ratio_sim > 1) %>% -->
+<!--   group_by(abundance_increasing) %>% -->
+<!--   tally() %>% -->
+<!--   mutate(prop = n / sum(n)) -->
+
+
+<!-- interaction_winning_fits_energy %>% -->
+<!--   mutate(energy_increasing = ratio_real > 1) %>% -->
+<!--   group_by(energy_increasing) %>% -->
+<!--   tally() %>% -->
+<!--   mutate(prop = n / sum(n)) -->
+
+<!-- ``` -->
+
+\newpage
+
+# Visualizing decoupling
+
+NOT AT ALL CLEAR why I am plotting multiple layers rather than plotting the "winning model" as just the color term. Was I not wanting the "~1"s to overlay on the others? There are fewer of them. 
+
 
 ```{r}
-interaction_winning_fits_energy %>%
-  mutate(abundance_increasing = ratio_sim > 1) %>%
-  group_by(abundance_increasing) %>%
-  tally() %>%
-  mutate(prop = n / sum(n))
 
+interaction_all_fits <- all_preds %>% group_by_all() %>% filter( grepl( "* source",model_formula), model_family == "Gamma") %>% mutate(plus = substr(model_formula, 12,12) == "+") %>% filter(!plus) %>% ungroup() %>%
+  left_join(select(winning_fits, matssname, model_formula) %>% rename(winning_formula = model_formula)) %>%
+  select(winning_formula, ratio_sim, ratio_real, matssname) %>%
+  mutate(currency = "Biomass")
 
-interaction_winning_fits_energy %>%
-  mutate(energy_increasing = ratio_real > 1) %>%
-  group_by(energy_increasing) %>%
-  tally() %>%
-  mutate(prop = n / sum(n))
-
-```
-
-## Direction and magnitude of slopes
-
-```{r}
-ggplot(slope_winning_fits_energy, aes(ratio_sim)) + geom_histogram() + scale_x_log10() + geom_vline(xintercept = 1) + ggtitle("Abundance-driven (null model) slope")
-```
-
-```{r}
-
-ggplot(slope_winning_fits_energy, aes(ratio_real)) + geom_histogram() + scale_x_log10() + geom_vline(xintercept = 1) + ggtitle("Observed slope")
-
-```
-
-## Direction of decoupling
-
-```{r, fig.dim= c(4,4)}
 
 interaction_all_fits_energy <- all_preds_energy %>% group_by_all() %>% filter( grepl( "* source",model_formula), model_family == "Gamma") %>% mutate(plus = substr(model_formula, 12,12) == "+") %>% filter(!plus) %>% ungroup() %>%
-  left_join(select(winning_fits_energy, matssname, model_formula) %>% rename(winning_formula = model_formula))
+  left_join(select(winning_fits_energy, matssname, model_formula) %>% rename(winning_formula = model_formula)) %>%
+  select(winning_formula, ratio_sim, ratio_real, matssname) %>%
+  mutate(currency = "Metabolic flux")
 
-ggplot(interaction_all_fits_energy, aes(ratio_sim, ratio_real)) + geom_point(alpha = .2) + geom_point(data = filter(interaction_all_fits_energy, winning_formula != "1"), aes(color = winning_formula), alpha = .5) + scale_y_log10() + scale_x_log10() + scale_color_viridis_d(end = .8) + theme(legend.position = "bottom") + geom_abline(intercept = 0, slope = 1) + geom_vline(xintercept = 1) + geom_hline(yintercept = 1)
+all_interaction <- bind_rows(interaction_all_fits, interaction_all_fits_energy)
+
 
 ```
+
+
+```{r, fig.dim= c(6,4)}
+
+decoupling_plot <- ggplot(all_interaction, aes(ratio_sim, ratio_real)) + geom_point(alpha = .2) + geom_point(data = filter(all_interaction, winning_formula != "1"), aes(color = winning_formula), alpha = .3) + scale_y_log10() + scale_x_log10() + scale_color_viridis_d(end = .8) + theme(legend.position = "bottom") + geom_abline(intercept = 0, slope = 1) + geom_vline(xintercept = 1) + geom_hline(yintercept = 1) +
+  xlab("Abundance-driven change \n Ratio of last value to first value") + 
+  ylab("Observed change \n Ratio of last value to first value") +
+  facet_wrap(vars(currency), ncol = 2)
+
+
+decoupling_plot
+```
+
+
 
 ## Change in mean body size
 
@@ -378,17 +408,17 @@ R2 of binomial GLM `overlap ~ model_formula` (which does not beat a `overlap ~ 1
 glm_cor
 ```
 
-# Goodness of fit of models
+<!-- # Goodness of fit of models -->
 
-```{r}
+<!-- ```{r} -->
 
-ggplot(winning_fits, aes(model_cor_squared)) + geom_histogram() + facet_wrap(vars(model_formula), scales = "free_y")
+<!-- ggplot(winning_fits, aes(model_cor_squared)) + geom_histogram() + facet_wrap(vars(model_formula), scales = "free_y") -->
 
-ggplot(winning_fits_energy, aes(model_cor_squared)) + geom_histogram() + facet_wrap(vars(model_formula), scales = "free_y")
+<!-- ggplot(winning_fits_energy, aes(model_cor_squared)) + geom_histogram() + facet_wrap(vars(model_formula), scales = "free_y") -->
 
-```
+<!-- ``` -->
 
 
-##
+
 \newpage
 # References
